# CourseWork_ImageProcessingTool

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  recentimages.cpp  recentimages.h
src/: main.cpp
src/config/: iptconfigmanager.cpp  iptconfigmanager.h
src/frontend/: bfdialog.cpp  bfdialog.h  bfdialog.ui  choosechanneldialog.cpp  choosechanneldialog.h  choosechanneldialog.ui  etdialog.cpp  etdialog.h  etdialog.ui  gfdialog.cpp  gfdialog.h  gfdialog.ui  imageprocessorwrapper.cpp  imageprocessorwrapper.h  laplfiltdialog.cpp  laplfiltdialog.h  laplfiltdialog.ui  ltdialog.cpp  ltdialog.h  ltdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  recentimages.cpp  recentimages.h  rotatedialog.cpp  rotatedialog.h  rotatedialog.ui  trdialog.cpp  trdialog.h  trdialog.ui
src/imgproc/: aliases.h  averaging.cpp  averaging.h  box_filter.cpp  box_filter.h  exp_transform.cpp  exp_transform.h  gauss_filter.cpp  gauss_filter.h  histeq.cpp  histeq.h  invert.cpp  invert.h  laplacian.cpp  laplacian.h  log_transform.cpp  log_transform.h  logtransform.cpp  logtransform.h  mirror.cpp  mirror.h  rotate.cpp  rotate.h  scale.cpp  scale.h  togray.cpp  togray.h
